...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gifTitle"
            app:placeholderImage="@android:drawable/ic_popup_sync" />

        <ImageView
            android:id="@+id/favouriteButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:tint="@color/mainText"
            app:layout_constraintBottom_toBottomOf="parent"
...
